# GL42Demo

./: .gitignore  .gitmodules  CMakeLists.txt  GL42Demo.code-workspace  LICENSE  README.md  build.sh  gl42  run.sh
lib/GL42/: Makefile  README.md  main.cpp  test
lib/GL42/src/exception/: InitializationExecption.cpp  InitializationExecption.hpp
lib/GL42/src/window/: window.cpp  window.hpp
lib/GL42/test.dSYM/Contents/Resources/DWARF/: test
res/blender/: test.blend
res/models/: test.mtl
res/shaders/: test.glsl
res/shaders/fragment/: f_test.glsl
res/shaders/vertex/: v_test.glsl
shaders/: test.glsl
src/: main.cpp
